Fix info section cards incorrect alignment

--- a/style.css
+++ b/style.css
@@ -70,7 +70,7 @@ ul {
 .info-section .cards {
     display: flex;
     justify-content: center;
-    align-items: center;
+    align-items: flex-start;
     gap: 60px;
 }
 
